// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailedMessagesDisplay > renders message counts 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Debug Console (F12 to close)                                                 │
│                                                                              │
│ ℹ  Repeated message (x5)                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DetailedMessagesDisplay > renders messages correctly 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Debug Console (F12 to close)                                                 │
│                                                                              │
│ ℹ  Log message                                                               │
│ ⚠  Warning message                                                           │
│ ✖  Error message                                                             │
│ 🔍 Debug message                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
